--- a/reference/01.md
+++ b/reference/01.md
@@ -1,3 +1,13 @@
-## 强弱类型语言比较
+## Java和JavaScript的关系
 
-Comparison of strong and weak typed languages.
+The relationship between Java and JavaScript
+
+`
+Java和JavaScript是两门不同的编程语言，它们之间没有直接的关系，只是因为历史的原因，它们的名字有一些相似。
+
+根据我搜索到的信息，JavaScript最初是由网景公司的Brendan Eich设计的，他只用了10天时间就完成了这门语言的基本框架。当时，网景公司的管理层希望这门语言能够与Java语言相兼容，因为Java是当时最流行的编程语言之一，而且与Sun公司有合作关系。所以，他们决定给这门语言取名为JavaScript，以便借助Java的知名度来推广。
+
+但是，JavaScript和Java的语法、数据类型、内存管理、面向对象、运行环境等方面都有很大的不同，它们并不是同一种语言的简化版或扩展版。JavaScript实际上是受到了C语言、Scheme语言和Self语言等多种语言的影响，它是一种基于原型的、弱类型的、解释型的脚本语言，主要用于客户端的网页开发。
+
+所以，Java和JavaScript的名字只是一个巧合，它们并没有本质的联系。这就像水和水晶的关系，虽然名字有一部分相同，但是本质上是完全不同的东西。
+`
