--- a/reference/03.md
+++ b/reference/03.md
@@ -1,3 +1,7 @@
 ## 强类型与弱类型
 
 Strong typing and weak typing
+
+`
+强类型与弱类型是两种不同的类型系统的分类方式。强类型意味着不同类型的数据不能混合操作，除非进行显式的类型转换。弱类型则允许不同类型的数据进行隐式的类型转换或混合操作。例如，Python是一种强类型的语言，而Perl是一种弱类型的语言。强类型和弱类型与动态类型和静态类型是不同的概念。动态类型和静态类型是指类型检查的时机，动态类型是在运行时进行类型检查，而静态类型是在编译时进行类型检查。例如，TypeScript是一种静态类型的语言，它可以解决JavaScript的类型系统的问题，提高代码的可靠性。强类型和弱类型与类型安全也是不同的概念。类型安全是指程序在运行时不会出现类型错误，即不会对错误的类型进行操作。类型安全的语言可以是强类型的，也可以是弱类型的，只要它们能够保证类型错误不会发生。例如，Java是一种强类型且类型安全的语言，它通过编译时和运行时的类型检查来防止类型错误。C/C++是一种弱类型且类型不安全的语言，它通过指针和强制类型转换来绕过类型检查，可能导致内存泄漏或崩溃。
+`
