--- a/reference/04.md
+++ b/reference/04.md
@@ -1,7 +1,10 @@
-## 强弱类型语言比较
+## 编译型语言和解释型语言
 
-Comparison of strong and weak typed languages.
+Compiled and interpreted languages
 
 `
- asdasd
+编译型语言和解释型语言是两种不同的编程语言类型，它们的主要区别在于源代码是如何转换成计算机能够识别和执行的机器码的。编译型语言需要提前将所有的源代码通过编译器一次性转换成可执行程序，比如 Windows 下的 .exe 文件。解释型语言则是通过解释器逐行对源代码进行解释和执行，不会生成可执行程序。编译型语言和解释型语言各有优缺点，具体如下：
+
+- 编译型语言的优点是执行效率高，运行时不需要编译器或解释器的支持，可以脱离开发环境运行。缺点是可移植性差，不同平台的可执行程序和源代码都可能不兼容，需要重新编译或修改。
+- 解释型语言的优点是可移植性好，源代码可以在任何安装了解释器的平台上运行，不需要重新编译或修改。缺点是执行效率低，运行时需要解释器的支持，不能脱离开发环境运行。
 `
