--- a/reference/01.md
+++ b/reference/01.md
@@ -5,7 +5,7 @@ The relationship between Java and JavaScript
 `
 Java和JavaScript是两门不同的编程语言，它们之间没有直接的关系，只是因为历史的原因，它们的名字有一些相似。
 
-根据我搜索到的信息，JavaScript最初是由网景公司的Brendan Eich设计的，他只用了10天时间就完成了这门语言的基本框架。当时，网景公司的管理层希望这门语言能够与Java语言相兼容，因为Java是当时最流行的编程语言之一，而且与Sun公司有合作关系。所以，他们决定给这门语言取名为JavaScript，以便借助Java的知名度来推广。
+JavaScript最初是由网景公司的Brendan Eich设计的，他只用了10天时间就完成了这门语言的基本框架。当时，网景公司的管理层希望这门语言能够与Java语言相兼容，因为Java是当时最流行的编程语言之一，而且与Sun公司有合作关系。所以，他们决定给这门语言取名为JavaScript，以便借助Java的知名度来推广。
 
 但是，JavaScript和Java的语法、数据类型、内存管理、面向对象、运行环境等方面都有很大的不同，它们并不是同一种语言的简化版或扩展版。JavaScript实际上是受到了C语言、Scheme语言和Self语言等多种语言的影响，它是一种基于原型的、弱类型的、解释型的脚本语言，主要用于客户端的网页开发。
 
