--- a/reference/06.md
+++ b/reference/06.md
@@ -5,11 +5,36 @@ Write a code example for Class
 Java
 
 `
-
+  /**
+    * HelloWorld
+    */
+  public class HelloWorld {
+    public static void main(String[] args) {
+      System.out.println("Hello World");
+    }
+  }
 `
 
 JavaScript
 
 `
+  class HelloWorld { 
+    constructor() { 
 
+    }
+  }
+`
+解构语法糖
+`
+  function HelloWorld() { 
+    
+  }
+
+  /**
+    * constructor : init 
+    */
+
+  function constructor() { 
+    HelloWorld()
+  }
 `
