--- a/reference/06.md
+++ b/reference/06.md
@@ -3,6 +3,8 @@
 Write a code example for Class
 
 Java
+[HelloWorld.java](../Java_demos/HelloWorld.java)
+[HelloWorld.class](../Java_demos/HelloWorld.class)
 
 `
   /**
@@ -16,6 +18,7 @@ Java
 `
 
 JavaScript
+[HelloWorld.js](../JavaScript_demos/01.js)
 
 `
   class HelloWorld { 
