--- a/reference/06.md
+++ b/reference/06.md
@@ -2,11 +2,12 @@
 
 Write a code example for Class
 
-Java
+#### Java
+
 [HelloWorld.java](../Java_demos/HelloWorld.java)
 [HelloWorld.class](../Java_demos/HelloWorld.class)
 
-`
+```
   /**
     * HelloWorld
     */
@@ -15,20 +16,22 @@ Java
       System.out.println("Hello World");
     }
   }
-`
+```
 
 JavaScript
 [HelloWorld.js](../JavaScript_demos/01.js)
 
-`
+```
   class HelloWorld { 
     constructor() { 
 
     }
   }
-`
+```
+
 解构语法糖
-`
+
+```
   function HelloWorld() { 
     
   }
@@ -40,4 +43,4 @@ JavaScript
   function constructor() { 
     HelloWorld()
   }
-`
+```
