--- a/reference/06.md
+++ b/reference/06.md
@@ -4,7 +4,7 @@ Write a code example for Class
 
 #### Java
 
-[HelloWorld.java](../Java_demos/HelloWorld.java)
+[HelloWorld.java](../Java_demos/HelloWorld.java)<br/>
 [HelloWorld.class](../Java_demos/HelloWorld.class)
 
 ```
