--- a/reference/07.md
+++ b/reference/07.md
@@ -1,1 +1,41 @@
-## 
+## 函数与构造函数
+
+Functions and constructors
+
+Java
+
+[Fun.java](../Java_demos/Fun.java)
+[Fun.class](../Java_demos/Fun.class)
+
+```
+    public class Fun {
+      public static void main(String[] args) {
+        String getTestValue = testFun();
+        System.out.println(getTestValue);
+      }
+
+      public static String testFun() {
+        return "test fun !";
+      }
+    }
+
+```
+
+JavaScript
+
+[constructor](../JavaScript_demos/03.js)
+
+```
+class Init { 
+  constructor({ x, y}) { 
+    console.log(`x: ${x}, y: ${y}`);
+    fun()
+  }
+
+  fun() {
+    console.log('测试一下')
+  }
+}
+
+new Init({x: 100, y: 200})
+```
