--- a/reference/08.md
+++ b/reference/08.md
@@ -1,1 +1,39 @@
-## 
+## 静态属性
+static properties
+
+Java
+
+```
+public class Proto {
+  public static String test = "test";
+
+  public static void main(String[] args) {
+    String proto = Proto.test;
+    System.out.println(proto);
+  }
+}
+```
+
+JavaScript
+
+```
+class Proto { 
+  static testA = 'testA !'
+  testB = 'testB !'
+  constructor() { 
+
+  }
+}
+
+console.log(Proto.testA)
+// console.log(Proto.testB)
+// TypeError: Cannot read property 'testB' of undefined
+// new Proto.testA()
+// TypeError: Proto.testA is not a constructor
+console.log(new Proto().testB)
+
+```
+
+静态属性的使用场景
+
+Math、自执行
