--- a/reference/09.md
+++ b/reference/09.md
@@ -1,1 +1,50 @@
-## 
+## 对象与实例化
+
+Objects and instantiation
+
+Java
+
+[Example.java](../Java_demos/Example.java)
+
+```
+/**
+ * Example
+ */
+public class Example {
+
+  public static void main(String[] args) {
+    System.out.println("Hello World");
+    Example example = new Example();
+    example.print();
+  }
+
+  public void print() {
+    System.out.println("Print");
+  }
+}
+```
+
+JavaScript
+
+```
+class Example { 
+  constructor() { 
+    this.print()
+  }
+
+  static print(x) { 
+    console.log('print ! x : ' + x);
+  }
+  print(x, y) { 
+    console.log('print ! x: ' + x + ' y : ' + y);
+  }
+
+  print(x, y, z) { 
+    console.log('print ! x: ' + x + ' y : ' + y + ' z : ' + z);
+  }  
+}
+
+Example.print()
+// Example.print is not a function
+// Example.print()
+```
