--- a/reference/10.md
+++ b/reference/10.md
@@ -1,1 +1,32 @@
-## 
+## 类型 
+type
+
+`
+Java中的类型是指Java语言中可以表示的数据的种类。Java语言是一种静态类型的语言，也就是说，所有的变量在使用之前必须先声明它们的类型。变量的类型决定了它可以存储的值的范围，以及可以对它进行的操作。
+
+Java语言支持八种基本类型（primitive types），它们是由语言预定义的，并且用关键字来表示。基本类型的值不会与其他基本类型的值共享状态。这八种基本类型分别是：
+
+- byte：byte类型是一个8位的有符号二进制补码整数。它的最小值是-128，最大值是127（包含）。byte类型可以用来节省大数组的内存空间，当内存空间真的很重要的时候。它们也可以用来代替int类型，当它们的限制可以帮助明确你的代码的时候；一个变量的范围受到限制可以作为一种文档的形式。
+- short：short类型是一个16位的有符号二进制补码整数。它的最小值是-32,768，最大值是32,767（包含）。与byte类型一样，同样的指导原则适用：你可以用一个short来节省大数组的内存空间，在内存空间真的很重要的情况下。
+- int：默认情况下，int类型是一个32位的有符号二进制补码整数，它的最小值是-2^31，最大值是2^31-1。在Java SE 8及以后的版本中，你可以使用int类型来表示一个无符号的32位整数，它的最小值是0，最大值是2^32-1。使用Integer类来使用int类型作为一个无符号整数。参见The Number Classes部分以获取更多信息。Integer类中添加了一些静态方法，如compareUnsigned, divideUnsigned等，来支持无符号整数的算术运算。
+- long：long类型是一个64位的二进制补码整数。有符号的long的最小值是-2^63，最大值是2^63-1。在Java SE 8及以后的版本中，你可以使用long类型来表示一个无符号的64位长整数，它的最小值是0，最大值是2^64-1。当你需要一个比int类型更宽的值范围时，使用这种数据类型。
+- float：float类型是一个单精度的32位IEEE 754浮点数。它的取值范围是从-3.4E38到3.4E38（包含）。float类型的数值通常用来表示近似值，而不是精确值。因此，不建议用float类型来表示货币或其他需要精确计算的值。
+- double：double类型是一个双精度的64位IEEE 754浮点数。它的取值范围是从-1.7E308到1.7E308（包含）。double类型的数值也是用来表示近似值，而不是精确值。如果你需要更高的精度，可以使用BigDecimal类。
+- boolean：boolean类型有两个可能的值：true和false。它用来表示逻辑值，如条件判断或循环控制。boolean类型的大小不是固定的，而是由虚拟机实现决定的。
+- char：char类型是一个单一的16位Unicode字符。它的最小值是'\u0000'（即0），最大值是'\uffff'（即65,535）。char类型可以用来存储任何Unicode字符，包括汉字。
+
+除了基本类型之外，Java语言还支持引用类型（reference types），它们是由类（class）、接口（interface）或数组（array）定义的。引用类型的值是对对象或数组的引用，而不是对象或数组本身。引用类型的变量可以被赋值为null，表示它们不指向任何对象或数组。
+
+String类型是一种特殊的引用类型，它用来表示一系列的字符。String类型在Java开发中使用非常广泛，可以直接通过字面量的形式声明。但是值得注意的是它并不是基本类型，是引用类型。所以String对象存储在堆空间，它的引用在栈空间。当Java中对引用类型变量赋值时，可以理解为将这个变量（引用）指向一块内存地址。例如：
+
+String str = "Hello";
+
+当执行这段代码时，实际上是栈中一个str指向堆中一块内存空间。
+
+String类型的特点是它是不可变的（immutable）。如果对象创建完成之后，其状态不会被修改，那么这个对象就是不可变对象。对象的状态又如何理解呢？可以理解为对象的属性值。对于String类型来说，它的属性值就是它所表示的字符序列。如果一个String对象的字符序列不会被改变，那么这个String对象就是不可变的。例如：
+
+String s1 = "Hello";
+String s2 = s1.toUpperCase();
+
+这段代码中，s1和s2都是String类型的变量，它们指向不同的String对象。s1指向的String对象的字符序列是"Hello"，s2指向的String对象的字符序列是"HELLO"。调用toUpperCase方法并不会改变s1指向的String对象的状态，而是创建了一个新的String对象，并让s2指向它。这就是String类型的不可变性。
+`
