--- a/reference/11.md
+++ b/reference/11.md
@@ -1,1 +1,16 @@
-## 
+## 变量与常量
+Variables and Constants
+
+Java变量与常量是Java语言中的两种基本概念，它们都是用来存储数据的。变量是可以在程序运行过程中改变其值的标识符，常量是在程序运行过程中不会改变其值的标识符。变量和常量的区别主要体现在以下几个方面：
+
+- 声明方式：变量的声明方式是`数据类型 变量名 = 初始值;`，例如`int x = 10;`。常量的声明方式是`final 数据类型 常量名 = 初始值;`，例如`final double PI = 3.14;`。注意，常量的声明必须使用`final`关键字，表示其值不可修改。
+- 命名规范：变量的命名规范是遵循驼峰命名法，即首个单词的首字母小写，后续单词的首字母大写，例如`studentName`。常量的命名规范是所有字母都大写，单词之间用下划线分隔，例如`MAX_VALUE`。
+- 值的修改：变量的值可以在程序运行过程中被重新赋值，例如`x = 20;`。常量的值不能在程序运行过程中被重新赋值，否则会报错，例如`PI = 3.14159;`会提示`cannot assign a value to final variable PI`。
+- 内存分配：变量的内存分配是在程序运行时动态进行的，根据变量的作用域和生命周期，变量会在栈内存或堆内存中分配空间。常量的内存分配是在程序编译时静态进行的，常量会在方法区的常量池中分配空间。
+
+[others 01](./12.md)
+[others 02](./13.md)
+
+前端的常量定义
+
+const定义的对象t中保存的是指向对象t的指针，这里的“不变”指的是指向对象的指针不变，而修改对象中的属性并不会让指向对象的指针发生变化，所以用const定义对象，对象的属性是可以改变的。
