--- a/reference/12.md
+++ b/reference/12.md
@@ -1,1 +1,34 @@
-## 
+## Java Constants 01
+
+Java常量可以定义对象吗？这是一个很好的问题，因为Java中的常量和对象有一些特殊的关系。首先，我们需要明确什么是常量和对象。
+
+常量（constant）是指在程序运行期间不会改变的值，比如字面量（literal）或者用final修饰的变量。常量可以是基本类型（primitive type）或者引用类型（reference type）。基本类型的常量直接存储了值，而引用类型的常量存储了对象的地址（reference）。
+
+对象（object）是指在Java中用类（class）定义的一种数据类型，它包含了属性（attribute）和方法（method）。对象是类的实例（instance），也就是用类的构造器（constructor）创建的一个具体的实体。对象在堆（heap）内存中分配空间，每个对象都有一个唯一的标识符（identifier），也就是对象的地址（reference）。
+
+那么，Java常量可以定义对象吗？答案是：取决于常量的类型。如果常量是基本类型的，那么它不能定义对象，因为它只能存储一个固定的值，而不是一个地址。如果常量是引用类型的，那么它可以定义对象，因为它存储了一个对象的地址，也就是指向了一个对象。但是，这并不意味着常量可以修改对象的内容，因为常量本身是不可变的，它只能指向一个固定的对象，不能指向其他的对象。也就是说，常量的引用不能改变，但是引用的对象可以改变。
+
+举个例子来说明：
+
+Java
+
+Java
+
+Java
+
+// 定义一个引用类型的常量，指向一个Student对象
+final Student s1 = new Student(1, "Alice");
+// 定义一个基本类型的常量，存储一个整数值
+final int x = 10;
+
+// 尝试修改常量的引用，会报错，因为常量不能重新赋值
+s1 = new Student(2, "Bob"); // 编译错误
+x = 20; // 编译错误
+
+// 尝试修改常量引用的对象的内容，可以成功，因为对象本身是可变的
+s1.id = 3; // 成功
+s1.name = "Charlie"; // 成功
+
+// 打印常量的值，可以看到对象的内容已经改变，但是引用没有改变
+System.out.println(s1); // Student@3, Charlie
+System.out.println(x); // 10
