--- a/reference/13.md
+++ b/reference/13.md
@@ -1,6 +1,6 @@
 ## Java Constants 02
 
-Java常量可以定义数组吗？这是一个关于Java语言基础的问题，我会尽力为你解答。😊
+`Java常量可以定义数组吗？这是一个关于Java语言基础的问题，我会尽力为你解答。😊`
 
 Java中的数组（array）是一种存储多个相同类型数据的数据结构，它的长度在创建时就确定了，不能动态改变。数组可以是基本类型（primitive type）或者引用类型（reference type）的，但是数组本身总是一个对象（object），也就是说，数组变量存储的是一个数组对象的地址（reference）。
 
