--- a/reference/14.md
+++ b/reference/14.md
@@ -3,10 +3,52 @@ Class inheritance
 
 Java
 
+[PerClass](../Java_demos/PerClass.java)
+[SonClass](../Java_demos/SonClass.java)
+
 ```
+class PerClass {
+  public static void main(String[] args) {
+    System.out.println("PerClass");
+  }
+
+  public void print(String str) {
+    System.out.println(str);
+  }
+}
+
+public class SonClass extends PerClass {
+
+  public static void main(String[] args) {
+    System.out.println("SonClass");
+    SonClass sonClass = new SonClass();
+    sonClass.print("Hello World !");
+  }
+}
+
 ```
 
 JavaScript
 
+[JavaScript extends](../JavaScript_demos/06.js)
+
 ```
+class PerClass { 
+  constructor() { 
+
+  }
+
+  print(str) {
+    console.log(str)
+  }
+}
+
+class SonClass extends PerClass {
+  constructor() { 
+    super()
+  }
+}
+
+let son = new SonClass()
+son.print('Hello World !')
 ```
