--- a/reference/15.md
+++ b/reference/15.md
@@ -1,20 +1,54 @@
-## 访问修饰符
-access control modifier
+## 类的继承
+Class inheritance
 
 Java
 
-Java访问控制修饰符是用来限制类、变量、方法和构造器的可见性和访问范围的。Java支持四种不同的访问控制修饰符，它们是：
+[PerClass](../Java_demos/PerClass.java)
+[SonClass](../Java_demos/SonClass.java)
 
-- public：公共的，表示最大的访问范围，可以在任何地方被访问。public可以修饰类、接口、变量、方法和构造器。
-- protected：受保护的，表示有限的访问范围，可以在同一个包中或者不同包中的子类中被访问。protected可以修饰变量、方法和构造器，不能修饰类和接口。
-- default：默认的，表示没有明确指定访问范围，只能在同一个包中被访问。default可以修饰类、接口、变量、方法和构造器。
-- private：私有的，表示最小的访问范围，只能在同一个类中被访问。private可以修饰变量、方法和构造器，不能修饰类和接口。
+```
+class PerClass {
+  public static void main(String[] args) {
+    System.out.println("PerClass");
+  }
 
-下表总结了不同访问控制修饰符的作用范围：
+  public void print(String str) {
+    System.out.println(str);
+  }
+}
 
-| 修饰符 | 同一个类 | 同一个包 | 不同包的子类 | 不同包的非子类 |
-| :----: | :------: | :------: | :----------: | :------------: |
-| public |   可以   |   可以   |     可以     |      可以      |
-|protected|   可以   |   可以   |     可以     |      不可以      |
-| default |   可以   |   可以   |     不可以     |      不可以      |
-| private |   可以   |   不可以   |     不可以     |      不可以      |
+public class SonClass extends PerClass {
+
+  public static void main(String[] args) {
+    System.out.println("SonClass");
+    SonClass sonClass = new SonClass();
+    sonClass.print("Hello World !");
+  }
+}
+
+```
+
+JavaScript
+
+[JavaScript extends](../JavaScript_demos/06.js)
+
+```
+class PerClass { 
+  constructor() { 
+
+  }
+
+  print(str) {
+    console.log(str)
+  }
+}
+
+class SonClass extends PerClass {
+  constructor() { 
+    super()
+  }
+}
+
+let son = new SonClass()
+son.print('Hello World !')
+```
